[rk-boot] Support gin framework [commit:dongxuny]
